# metno_gifs_cpp

./: README.md  build_dev_image.sh  build_image.sh  build_two_stage_image.sh  infinite_run.sh  metno_gifs_cpp.docker  metno_gifs_cpp_dev.docker
libs/: netcdf_install.md  opencv_install.md
src/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  convert.sh  create_images.cpp  create_images.h  download.cpp  download.h  main.cpp  read_temperature.cpp
